- New GEL functions: smartSplit
- New GEL controls: forEachIndex, forRange, filter
- New GEL parameters:
  - preserveAllTokens on split function
- New exporters: to RDF (as extension)
- In CSV and TSV importers, added support for ignoring quotation marks
- Regexp groups capturing GEL function
- Text facet's choice count limit is now configurable through preference page

Fixes:
- TSV/CSV exporter bug: Gridworks crashed when there were empty cells.
- Issue 69: ControlFunctionRegistry now correctly registers Chomp expression as "chomp" key.
- Issue 66: Records not excluded with inverted text facet

1.1 Release (May 27, 2010)

Features:
- Row/record sorting (Issue 32)
- CSV exporter (Issue 59)
- Mqlwrite exporter
- Templating exporter (experimental)

Fixes:
- Issue 34: "Behavior of Text Filter is unpredictable when "regular expression" mode is enabled."
  Regex was not compiled with case insensitivity flag.
- Issue 4: "Match All bug with ZIP code". Numeric values in cells were not stringified first
  before comparison.
- Issue 41: "Envelope quotation marks are removed by CSV importer"
- Issue 19: "CSV import is too basic"
- Issue 15: "Ability to rename projects"
- Issue 16: "Column name collision when adding data from Freebase"
- Issue 28: "mql-like preview is not properly unquoting numbers"
- Issue 45: "Renaming Cells with Ctrl-Enter produced ERROR"
  Tentative fix for a concurrent bug.
- Issue 46: "Array literals in GEL"
- Issue 55: "Use stable sorting for text facets sorted by count"
- Issue 53: "Moving the cursor inside the Text Filter box by clicking"
- Issue 58: "Meta facet"
  Supported by the function facetCount()
- Issue 14: "Limiting Freebase load to starred records"
  We load whatever rows that are filtered through, not particularly starred rows.
- Issue 49: "Add Edit Cells / Set Null"
- Issue 30: "Transform dialog should remember preferred language."
- Issue 62: "It'd be nice if URIs were hyperlinked in the data cells"

Other Changes: