@@ -64,6 +64,9 @@
                     <tr><td><span class="field-label">Data File</span>:</td>
                       <td><input type="file" id="project-file-input" name="project-file" /></td>
                     </tr>
+                    <tr><td><span class="field-label">Or Data File URL</span>:</td>
+                      <td><input id="project-url-input" name="project-url" size="50" /></td>
+                    </tr>
                     <tr><td><span class="field-label">Project Name</span>:</td>
                       <td><input type="text" size="30" id="project-name-input" name="project-name" /></td></tr>
                     <tr><td></td>
@@ -109,7 +112,7 @@
 
             <div class="field-group">
               <div><input id="ignore-quotes-input" name="ignore-quotes" type="checkbox" />Ignore Quotation Marks </div>
-            <div class="field-hint">Ignore quotation marks, using all newlines and separators</div>
+            <div class="field-hint">Ignore quotation marks,<br/>using all newlines and separators</div>
             </div>
                     </td>
                   </tr></table>
