@@ -15,6 +15,9 @@ Features:
 - In CSV and TSV importers, added support for ignoring quotation marks
 - Regexp groups capturing GEL function
 - Text facet's choice count limit is now configurable through preference page
+- Select All and Unselect All buttons in History Extract dialog
+- Schema skeleton: support for multiple cells per cell-as nodes, and for conditional links
+- Added support for creating a project by pointing to a data file URL.
 
 Fixes:
 - TSV/CSV exporter bug: Gridworks crashed when there were empty cells.
